fix: colors for readabilty and looks

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@
     height: auto;
     z-index: -100;
     margin: 0;
-    background: #4e54c8;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+    background: #021B79;
+    background: -webkit-linear-gradient(to left, #0575E6, #021B79);
     width: 100%;
     height: 100vh;
     position: fixed;
