--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,10 +6,9 @@
     font-family: 'Josefin Slab';
     background: linear-gradient(
         45deg,
-        #7b4397 0%,
-        #c33764 25%,
-        #1d2671 75%,
-        #4e65ff 100%
+        #c33764 0%,
+        #7b4397 50%,
+        #c33764 100%
     );
     background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
